force-app/main/default/objects/PartnerClientMap__c/PartnerClientMap__c.object-meta.xml
<CustomObject>
    <label>Partner Client Map</label>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PartnerClientMaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>