force-app/main/default/objects/PartnerClientMap__c/fields/Bill_type__c.field-meta.xml
<CustomField>
    <fullName>Bill_type__c</fullName>
    <label>Bill type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>