force-app/main/default/objects/PartnerClientMap__c/fields/Determine_Total__c.field-meta.xml
<CustomField>
    <fullName>Determine_Total__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Determine Total</label>
    <type>Checkbox</type>
</CustomField>