force-app/main/default/objects/PartnerClientMap__c/fields/Fulfillment_Location_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Location_API_Key__c</fullName>
    <label>Fulfillment Location API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>