force-app/main/default/objects/PartnerClientMap__c/fields/Is_Registration_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Registration_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Registration Email</label>
    <type>Checkbox</type>
</CustomField>