force-app/main/default/objects/PartnerClientMap__c/fields/Is_Retail_Partner__c.field-meta.xml
<CustomField>
    <fullName>Is_Retail_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Retail Partner</label>
    <type>Checkbox</type>
</CustomField>