force-app/main/default/objects/PartnerClientMap__c/fields/Named_credential_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_credential_Name__c</fullName>
    <label>Named credential Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>