force-app/main/default/objects/PartnerClientMap__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <label>Partner Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>