force-app/main/default/objects/PartnerClientMap__c/fields/Payment_Key__c.field-meta.xml
<CustomField>
    <fullName>Payment_Key__c</fullName>
    <label>Payment Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>