force-app/main/default/objects/PartnerClientMap__c/fields/Publish_external_Status_Notification__c.field-meta.xml
<CustomField>
    <fullName>Publish_external_Status_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publish external Status Notification</label>
    <type>Checkbox</type>
</CustomField>