force-app/main/default/objects/PartnerClientMap__c/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Channel</label>
    <referenceTo>SalesChannel</referenceTo>
    <relationshipLabel>PartnerClientMaps</relationshipLabel>
    <relationshipName>PartnerClientMaps</relationshipName>
    <type>Lookup</type>
</CustomField>