force-app/main/default/objects/PartnerClientMap__c/fields/Send_kit_Shipped_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_kit_Shipped_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send kit Shipped Notification</label>
    <type>Checkbox</type>
</CustomField>