force-app/main/default/objects/PartnerClientMap__c/fields/Send_Order_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Send_Order_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Order Confirmation</label>
    <type>Checkbox</type>
</CustomField>