force-app/main/default/objects/PartnerClientMap__c/fields/Send_Results_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Results_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Results Email</label>
    <type>Checkbox</type>
</CustomField>