force-app/main/default/objects/PartnerClientMap__c/fields/Short_Code__c.field-meta.xml
<CustomField>
    <fullName>Short_Code__c</fullName>
    <label>Short Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>