force-app/main/default/objects/PartnerClientMap__c/fields/Suppress_Expiry_Email__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Expiry_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Expiry Email</label>
    <type>Checkbox</type>
</CustomField>