force-app/main/default/objects/PartnerClientMap__c/fields/Suppress_Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Reminder_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Reminder Email</label>
    <type>Checkbox</type>
</CustomField>