force-app/main/default/objects/PartnerClientMap__c/fields/Trigger_Appointment_Confirmaiton_Event__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Appointment_Confirmaiton_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Appointment Confirmaiton Event</label>
    <type>Checkbox</type>
</CustomField>