force-app/main/default/objects/PartnerClientMap__c/fields/Trigger_HUB_For_Partner__c.field-meta.xml
<CustomField>
    <fullName>Trigger_HUB_For_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger HUB For Partner</label>
    <type>Checkbox</type>
</CustomField>